Projetos Front-End

--- a/optimus-tech/src/css/style.css
+++ b/optimus-tech/src/css/style.css
@@ -17,5 +17,6 @@
     --color-sixth: #EAECF0;
     --color-black: #000000;
     --color-gray: #F9FAFB;
+    --color-footer: #98A2B3;
     --soucer-first: 'Inter', sans-serif;
 }
