--- a/optimus-tech/src/css/footer.css
+++ b/optimus-tech/src/css/footer.css
@@ -58,7 +58,7 @@
     font-family: var(--soucer-first);
     font-size: 16px;
     font-weight: 400;
-    color: var(--color-second);
+    color: var(--color-footer);
     padding-top: 2em;
     padding-bottom: 4em;
 }
