--- a/optimus-tech/src/css/main.css
+++ b/optimus-tech/src/css/main.css
@@ -38,7 +38,7 @@
     font-size: 20px;
     font-weight: 400;
     color: var(--color-fourth);
-    padding: 0 10%;
+    padding: 0 19%;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -174,7 +174,8 @@
     font-size: 36px;
     font-weight: 500;
     color: var(--color-fourth);
-    margin: 0 2em;
+    margin: 0 1em;
+    padding: 0 0.25em;
     display: flex;
     justify-content: center;
     text-align: center;
