Projetos Front-End

--- a/ladingpage-sendpay/src/css/header.css
+++ b/ladingpage-sendpay/src/css/header.css
@@ -10,8 +10,16 @@
     align-items: center;
 }
 
-.header-navigation {
-    
+.logo {
+    width: 51px;
+    height: 51px;
+    padding-right: 1em;
+}
+
+.site-title {
+    font-family: var(--font-primary);
+    font-size: 30px;
+    font-weight: 700;
 }
 
 a {
